corrected the layout issue with the barcode search wrapping in some browsers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,7 +91,7 @@ td.no-border {
 }
 
 #basic_search_form {
-  padding: 10px 0 0 45px;
+  padding: 10px 0 0 30px;
 }
 .white {
   color: white;
